# nao-says-robot-game

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  simonsays.py
georgs-scripte/: adv_awareness.py  adv_facetracking.py  advanced_speech_recognition.py  advanced_vision_v1_works.py  simple_awareness.py  simple_facetracker.py  simple_motion_control.py  waving_hand.py
lerngruppe_scripts/: download_model.py  extract_command  extract_command.py  motion_reactions.py  reaction_waveback  speech2text.py
src/: execute.py  tasks.py  vision.py  voice_commands.py
src/nao_bundle/: execute.py  tasks.py
src/nao_says/: execute.py  setup_models.py  voice.py
